fix: hero section overflowing

--- a/src/styles/CloudHolder.css
+++ b/src/styles/CloudHolder.css
@@ -1,7 +1,6 @@
 .cloud-holder {
     display: grid;
     width: 100%;
-    height: 480px;
     overflow: hidden;
     justify-content: stretch;
     /* -webkit-mask-image: linear-gradient(to bottom, black 70%, transparent 100%);
